Fix little css bugs on map view with drawer open on mobile

--- a/src/routes/MapExplorer/MapExplorer.scss
+++ b/src/routes/MapExplorer/MapExplorer.scss
@@ -274,6 +274,7 @@ button.toggleFeatureFiltersButton {
 
 @media screen and (max-width: 375px) {
   .toggleDrawerButton.drawerOpen {
-    z-index: 100;
+    z-index: 80;
+    top: 19px;
   }
 }
